2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Print warning if autolabel is set to the
	  "MATCH-AUTOLABEL" string

2016-12-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcheck-device.pl: Fix printing error

2016-12-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Paths.pm.in: Add $libdir
	* common-src/amgetconf.pl: Add build.libdir and build.amlibdir

2016-12-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Label.pm: Fix for force (-f in amlabel)

2016-12-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtoc.pl: Fix for new log file format

2016-12-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report.pm: Fix exit_status for some error

2016-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Debug.swg (_my_warn): Fix for array argument

2016-12-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (lookup_last_reusable_tape): correctly check
	  pool and label

2016-12-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/make_security_file.c: Fix comment in amanda-security.conf

2016-12-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (when_overwrite): Use default storage if the
	  tle have no storage

2016-12-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: typo

2016-12-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/syshacks.m4: Define GETSERVBYPORT_R5 on solaris2
	* common-src/amutil.c: Use solaris 5 arguments for getservbyport_r

2016-11-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Run.pm (check_amreport): skip_size default
	  to 1
	* installcheck/failure-client-custom-compress-end.pl,
	  installcheck/failure-client-custom-compress-no-exec.pl,
	  installcheck/failure-client-custom-compress-not-found.pl,
	  installcheck/failure-client-custom-compress.pl,